<?xml version="1.0"?>
<package format="2">
  <name>tf2_manif</name>
  <version>0.0.0</version>
  <description>tf2_manif</description>
  <author>Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <!-- Not a valid rosdep (yet?)
  <build_depend>manif</build_depend>
  <build_export_depend>manif</build_export_depend>
  -->

</package>
